--- a/component/tooltip/src/tooltip.scss
+++ b/component/tooltip/src/tooltip.scss
@@ -85,8 +85,13 @@ x-tooltip{
         // however, if _force-display is set on a hidden tooltip, ignore
         // constraints (this allows measurement of metrics)
         &:not([_force-display]){
-            width: 0px !important;
-            height: 0px !important;
+            // can't use width/height:0px due to causing jump upon 
+            // dimension recalculation in Webkit
+            left: 0px!important;
+            top: 0px!important;
+            margin: 0!important;
+            max-width: 100%!important;
+            max-height: 100%!important;
             overflow:hidden!important;
             border-width: 0px!important;
         }
